--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,7 +25,21 @@ hr {
   width: 100%;
   z-index: 0;
 }
+.leaflet-bar{
+  border: 0 !important;
+}
+.leaflet-control-zoom a{
+  width: 36px !important;
+  height: 36px !important;
+  line-height: 36px !important;
+  font-size: 22px !important;
+  background: rgb(255 255 255 / 41%) !important;
+}
+.leaflet-control{
+  margin-top: 20px !important;
+}
 
+.leaflet-control-zoom a,
 #controles,
 #legenda,
 header h3 {
@@ -434,6 +448,8 @@ option {
   background-color: #0284c7;
 }
 
+
+
 /* ======== LAYOUT MOBILE ======== */
 @media (max-width: 768px) {
 
@@ -493,7 +509,7 @@ option {
   }
 
   #legenda {
-    display: none;
+    bottom: 3vh;
   }
 
   #btnMobileToggle {
